--- a/ticket-batch/pom.xml
+++ b/ticket-batch/pom.xml
@@ -48,6 +48,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.1.1</version>
+        </dependency>
     </dependencies>
 
 
